# FastBlog

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  oas.yaml  pyproject.toml  roadmap.md
.github/workflows/: test.yml
docs/: oas.yaml  roadmap.md
migrations/: env.py
migrations/versions/: 02ad2b0cb214_add_user_id_to_commentmodel.py  0322e97bae38_add_draftpostsmodel_and_its_rels.py  1e42c659b916_change_draft_posts_to_drafts_all_places.py  2eb9cd74e3c7_add_tagmodel_and_posttagmodel_models.py  2f2b054c0a54_add_a_gist_index_for_path_of_comments.py  32b321ea6ac7_make_posts_user_id_nullable.py  4724aa1400c5_add_name_bio_twitter_and_email_to_.py  4fe7d032bab3_new_migration.py  54c2eda718df_remove_posttagmodel_and_setup_many_to_.py  5d30fcc241a3_add_draftpostsmodel_and_its_rels.py  6e4a0b3ff89b_make_path_sqlitable.py  71326616951e_recreate_the_migrations_due_to_vary_big_.py  7a35a28ad3ea_initial_migration_add_posttable.py  7ca65d8bfa74_draft_posts_drafts.py  7d1b1a1946ad_add_usermodel_and_the_needed_rels.py  9bd8d5519b08_add_commentmodel.py  9f16587d7cc1_initial_migration.py  a04fe646af6d_correct_the_type_of_username_mapped_.py  a41f6f957bd0_change_users_id_fk_to_users_username.py  a557eeda29b1_revert_back_the_nullability_of_path_on_.py  a90cc0025977_add_updated_columns_to_postmodel_.py  aa0f5ca3f1d4_add_updated_to_commentmodel.py  af812abcc174_change_draft_posts_to_drafts.py  b216f1e9cb11_add_url_column_to_postmodel.py  b48c2269c53d_add_draftpostmodel_and_the_needed_rels.py  b7b67548bec8_add_username_fk_to_commentmodel.py  bdd5e9a5b364_add_usermodel.py  d504614ad8a1_add_created_column_to_users_table.py  f1582a84a783_save_comment_paths_in_comment_model.py  f75bf4f86710_make_the_rel_between_post_and_its_.py  f9113e99878b_make_username_unique.py
src/common/: exceptions.py  utils.py
src/repository/: __init__.py  draft_post_repo.py  draft_repo.py  models.py  post_repo.py  post_repository.py  posts_repository.py  unit_of_work.py  user_repo.py  user_repository.py  users_repository.py
src/repository/repos/: __init__.py  comment_repo.py  draft_repo.py  post_repo.py  tag_repo.py  user_repo.py
src/service/: __init__.py  comment_service.py  draft_post_service.py  draft_service.py  objects.py  post_service.py  posts.py  posts_service.py  user_service.py  users.py
src/service/objects/: __init__.py  draft_posts.py  posts.py  users.py
src/web/: app.py  config.py  database.py  dependencies.py
src/web/api/: __init__.py  api.py  auth.py  comments_route.py  draft_route.py  drafts.py  global_route.py  globals.py  post_route.py  posts.py  schemas.py  user_route.py  users.py
src/web/core/: config.py  database.py  dependencies.py  schemas.py  security.py
src/web/core/schemas/: __init__.py  comment_schema.py  draft.py  draft_schema.py  enums.py  post.py  post_schema.py  tag.py  user.py  user_schema.py
tests/: conftest.py  test_404.py  test_auth.py  test_comments.py  test_drafts.py  test_globals.py  test_posts.py  test_replies.py  test_success_web.py  test_unauthorized.py  test_users.py  test_web.py
tests/auth/: test_auth.py
tests/post_draft_crud/: test_fail.py  test_success.py
tests/posts/: __init__.py  conftest.py  test_fail.py  test_success.py
