[tool.poetry]
name = "fastblog"
version = "0.1.0"
description = "A RESTful blog system built with Python and FastAPI ⚡"
authors = ["MahdiHaghverdi <mahdihaghverdliewpl@gmail.com>"]
license = 'GPLv3'
readme = "README.md"
repository = 'https://github.com/mahdihaghverdi/FastBlog'

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "~0.103.1", extras = ["all"]}
alembic = "~1.12.0"
pyjwt = "~2.8.0"
cryptography = "~41.0.3"
sqlalchemy = {version = "~2.0.20", extras = ["asyncio"]}
asyncpg = "~0.28.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "~3.3.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mahdihaghverdi/FastBlog/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
